--- a/schedule.html
+++ b/schedule.html
@@ -53,15 +53,17 @@
     </center>
     <p class=bigText> Our Schedule </p>
 
-    <p class=midTextWhite> All show times are from 9pm-1am </p>
+    <p class=midTextWhite> Show times Vary </p>
     <p></p>
     <p></p>
-    <p class=midTextWhite> Tuesday: Granfalloons </p>
-    <p class=midTextWhite> Wednesday: Waterway</p>
-    <p class=midTextWhite> Thursday: Eagles Nest</p>
-    <p class=midTextWhite> Friday: Primanti Bros York</p>
-    <p class=midTextWhite> Saturday: Primanti Bros Lancaster</p>
-    <p class=midTextWhite> Sunday: Granfalloons </p>
+    <p class=midTextWhite> Monday: Crystal Ball 730-1130 </p>
+    <p class=midTextWhite> Tuesday: Granfalloons 9-12 </p>
+    <p class=midTextWhite> Wednesday: Waterway 9-1 </p>
+    <p class=midTextWhite> Thursday: Crystal Ball 730-1130 </p>
+    <p class=midTextWhite> Thursday: Primanti Bros Hershey 9-12 </p>
+    <p class=midTextWhite> Friday: Primanti Bros York 9-1 </p>
+    <p class=midTextWhite> Saturday: Primanti Bros Lancaster 9-1230 </p>
+    <p class=midTextWhite> Sunday: Holy Hound 8-12 </p>
     <p></p>
     <p></p>
     <p></p>
