--- a/schedule.html
+++ b/schedule.html
@@ -53,7 +53,7 @@
     </center>
     <p class=bigText> Our Schedule </p>
 
-    <p class=midTextWhite> Show times Vary </p>
+    <p class=midTextWhite> Show Times Vary </p>
     <p></p>
     <p></p>
     <p class=midTextWhite> Monday: Crystal Ball 730-1130 </p>
