--- a/schedule.html
+++ b/schedule.html
@@ -56,13 +56,13 @@
     <p class=midTextWhite> Show Times Vary </p>
     <p></p>
     <p></p>
-    <p class=midTextWhite> Monday: Crystal Ball 730-1130 </p>
     <p class=midTextWhite> Tuesday: Granfalloons 9-12 </p>
+    <p class=midTextWhite> Tuesday: Miller's Ale House 9-1 </p>
     <p class=midTextWhite> Wednesday: Waterway 9-1 </p>
-    <p class=midTextWhite> Thursday: Crystal Ball 730-1130 </p>
-    <p class=midTextWhite> Thursday: Primanti Bros Hershey 9-12 </p>
+    <p class=midTextWhite> Thursday: Crystal Ball 7:30-11:30 </p>
+    <p class=midTextWhite> Thursday: Primanti Bros Hershey 8-11:30 </p>
     <p class=midTextWhite> Friday: Primanti Bros York 9-1 </p>
-    <p class=midTextWhite> Saturday: Primanti Bros Lancaster 9-1230 </p>
+    <p class=midTextWhite> Saturday: Primanti Bros Lancaster 9-12:30 </p>
     <p class=midTextWhite> Sunday: Holy Hound 8-12 </p>
     <p></p>
     <p></p>
