Redesign Homepage, and clean up of structure

--- a/contact.html
+++ b/contact.html
@@ -44,12 +44,12 @@
 
     </style>
 </head>
-<body background='./bkbg.jpg' >
+<body background='images/bkbg.jpg' >
 
 
 <div class = mainStyle>
     <center>
-    <img src='./keokikid.jpeg' alt="some crap here" class = stretch>
+    <img src='images/keokikid.jpeg' alt="some crap here" class = stretch>
 
           <p class = midTextWhite> Wanna get in touch with the Karaoke Kid </p>
           <p> </p>
