--- a/index.html
+++ b/index.html
@@ -1,88 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Karaoke Kid</title>
-
-    <style>
-
-        a.button4 {
-            display: inline-block;
-            padding:0.5em 3em;
-            border:0.16em solid #FFFFFF;
-            margin:0 0.3em 0.3em 0;
-            box-sizing: border-box;
-            text-decoration:none;
-            text-transform:uppercase;
-            font-family:'Roboto',sans-serif;
-            font-weight:400;
-            color:#FFFFFF;
-            text-align:center;
-            transition: all 0.15s;
-            width: 200px;
-        }
-        a.button4:hover{
-            color:#DDDDDD;
-            border-color:#DDDDDD;
-            width: 200px;
-
-        }
-        a.button4:active{
-            color:#BBBBBB;
-            border-color:#BBBBBB;
-            width: 200px;
-
-        }
-        @media all and (max-width:30em){
-             a.button4{
-                display:block;
-                margin:0.4em auto;
-                width: 200px;
-
-                 }
-        }
-
-    </style>
-
-
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700|Open+Sans:400,600,700' rel='stylesheet' type='text/css' />
+    <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 </head>
-
-<body background='./bkbg.jpg' >
-
-    <div class = mainStyle>
-        <center>
-
-            <img src='./bkeoki.png' alt="some crap here" height=400px width="400px">
-            <br>
-            <a href="./search.html" class="button4">Search</a><br>
-            <a href="./schedule.html" class="button4">Schedule</a><br>
-            <a href="./webSearch.html" class="button4">Web Search</a><br>
-            <a href="./contact.html" class="button4">Contact</a><br>
-            <a href="./donate.html" class="button4">Donate</a><br>
-
-           <!-- <form method="get" action="search.html">
-                <button class="button button4" type="submit" >Search</button>
-            </form>
-            <form method="get" action="schedule.html">
-                <button class="button4" type="submit">Schedule</button>
-            </form>
-            <form method="get" action="webSearch.html">
-                <button class="button4" type="submit">Web Search</button>
-            </form>
-            <form method="get" action="contact.html">
-                <button class="button4" type="submit">Contact</button>
-            </form>
-            <form method="get" action="donate.html">
-                <button class="button4" type="submit">Donate</button>
-            </form>-->
-
-        </center>
+<body>
+<div id="wrapper">
+    <div id="header-wrapper">
+        <div id="header" class="container">
+            <div id="logo">
+                <h1><a href="./index.html">Karaoke Kid</a></h1>
+            </div>
+            <div id="menu">
+                <ul>
+                    <li><a href="./search.html" accesskey="1" title="">Search</a></li>
+                    <li><a href="./schedule.html" accesskey="2" title="">Schedule</a></li>
+                    <li><a href="./webSearch.html" accesskey="3" title="">Purchased</a></li>
+                    <li><a href="./contact.html" accesskey="4" title="">Contact Us</a></li>
+                    <li><a href="./donate.html" accesskey="5" title="">Donate</a></li>
+                    <!--<li><a href="./donate.html" title="">Donate</a></li>-->
+                </ul>
+            </div>
+        </div>
     </div>
+    <div id="banner" class="container"><img src="images/banner.jpg" width="1000" height="300" alt="" /></div>
+    <div id="page" class="container">
+        <div id="content">
+            <div id="box1">
+                <h2 class="title"><a href="#">Let's Have a Great Night</a></h2>
+                <p>Karaoke Kid offers the best quality Karaoke DJ Services in South Central PA. In addition to our Karaoke DJ Services we also offer Live Music Services for Weddings, Corporate events, and Weddings!</p>
+            </div>
+            <div>
+                <ul class="style1">
+                    <li class="first">
+                        <h3><em><img src="images/pbros.jpg" alt="" width="130" height="130" class="alignleft border" /></em>Primanti Bros Lancaster</h3>
+                        <p>Half priced drinks 9-11.
+                            Karaoke 9-1230ish.
+                            You know you want to..</p>
+                        <p><a href="./schedule.html" class="button-style">Schedule</a></p>
+                    </li>
+                    <li>
+                        <h3><em><img src="images/holyhound.png" alt="" width="130" height="130" class="alignleft border" /></em>Holy Hound Taproom</h3>
+                        <p>Featuring 30 rotating craft beers on tap, a wide range of bottles, a variety of single malt scotch and small batch bourbon, karaoke 9-Midnight.</p>
+                        <p><a href="./schedule.html" class="button-style">Schedule</a></p>
+                    </li>
+                    <li>
+                        <h3><em><img src="images/falloons.jpg" alt="" width="130" height="130" class="alignleft border" /></em>Granfalloons</h3>
+                        <p>A proud and meaningless association of human beings, karaoke starts at 9.</p>
+                        <p><a href="./schedule.html" class="button-style">Schedule</a></p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div id="sidebar">
+            <h2>Upcoming Events</h2>
+            <ul class="style3">
+                <li class="first">
+                    <p class="date">tbd 2019</p>
+                    <p><a href="#">Meet and Greet with Pete!</a></p>
+                </li>
+                <li>
+                    <p class="date">tbd 2019</p>
+                    <p><a href="#">Meet and Greet with Nikki</a></p>
+                </li>
+                <li>
+                    <p class="date">tbd 2019</p>
+                    <p><a href="#">Meet and Greet with Zach</a></p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div id="footer">
+        <p>All rights reserved. Design by Templated. Created by Stinky</p>
+    </div>
+</div>
 </body>
-
-
+</html>
