--- a/schedule.html
+++ b/schedule.html
@@ -44,12 +44,12 @@
 
     </style>
 </head>
-<body background='./bkbg.jpg'>
+<body background='images/bkbg.jpg'>
 
 
 <div class=mainStyle>
     <center>
-        <img src='./orkeokikid.jpg' alt="some crap here" class = stretch>
+        <img src='images/orkeokikid.jpg' alt="some crap here" class = stretch>
     </center>
     <p class=bigText> Our Schedule </p>
 
