--- a/webSearch.html
+++ b/webSearch.html
@@ -45,10 +45,10 @@
     </style>
 </head>
 
-<body background='./bkbg.jpg'>
+<body background='images/bkbg.jpg'>
 <div class=mainStyle>
     <center>
-    <img src='./orkeokikid.jpg' alt="some crap here" class=stretch>
+    <img src='images/orkeokikid.jpg' alt="some crap here" class=stretch>
 
     <p class=midTextWhite> Can't find what you're looking for? </p>
     <p> </p>
