--- a/donate.html
+++ b/donate.html
@@ -44,12 +44,12 @@
 
     </style>
 </head>
-<body background='./bkbg.jpg'>
+<body background='images/bkbg.jpg'>
 
 
 <div>
     <center>
-        <img src='./orkeokikid.jpg' alt="some crap here" class = stretch>
+        <img src='images/orkeokikid.jpg' alt="some crap here" class = stretch>
     </center>
         <p class = bigTextWhite> Donate to us </p>
         <p> </p>
