table layout: fixed for real this time

--- a/search.html
+++ b/search.html
@@ -26,6 +26,7 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+  table-layout: fixed;
 }
 
 #contentArea li a {
@@ -36,7 +37,8 @@
   text-decoration: none;
   font-size: 18px;
   color: black;
-  display: block
+  display: block;
+  table-layout: fixed;
 }
 
 #contentArea li a:hover:not(.header) {
