--- a/search.html
+++ b/search.html
@@ -27,6 +27,7 @@
   padding: 0;
   margin: 0;
   table-layout: fixed;
+
 }
 
 #contentArea li a {
@@ -39,6 +40,7 @@
   color: black;
   display: block;
   table-layout: fixed;
+  width: 500px;
 }
 
 #contentArea li a:hover:not(.header) {
