--- a/search.html
+++ b/search.html
@@ -40,7 +40,7 @@
   color: black;
   display: block;
   table-layout: fixed;
-  width: 500px;
+  width: 40%;
 }
 
 #contentArea li a:hover:not(.header) {
