attempt at a loader

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
+
 <div id="wrapper">
     <div id="header-wrapper">
         <div id="header" class="container">
@@ -17,7 +18,7 @@
             </div>
             <div id="menu">
                 <ul>
-                    <li><a href="./search.html" accesskey="1" title="">Search</a></li>
+                    <li><a href="./loader.html" accesskey="1" title="">Search</a></li>
                     <li><a href="./schedule.html" accesskey="2" title="">Schedule</a></li>
                     <li><a href="./webSearch.html" accesskey="3" title="">Purchased</a></li>
                     <li><a href="./contact.html" accesskey="4" title="">Contact Us</a></li>
