--- a/loader.html
+++ b/loader.html
@@ -13,6 +13,8 @@
     <img id="loading-image" src="images/loader.gif" alt="Loading..." />
 </div>
 
-
+<script>
+    window.location.assign('./search.html');
+</script>
 </body>
 </html>
