--- a/search.html
+++ b/search.html
@@ -51,7 +51,7 @@
 
 
 
-<h1>Our music list</h1>
+<h1>Our Music List</h1>
 
 <input type="text" id="userInput" onkeyup="myFunction()" placeholder="Search by Artist or Song Title.." title="Type in a name">
 
