--- a/loader.html
+++ b/loader.html
@@ -11,6 +11,9 @@
 <body>
 <div id="loading">
     <img id="loading-image" src="images/loader.gif" alt="Loading..." />
+    <p>Loading...</p>
+    <p>Please be patient</p>
+    <p>We just have too much music</p>
 </div>
 
 <script>
