--- a/loader.html
+++ b/loader.html
@@ -11,9 +11,9 @@
 <body>
 <div id="loading">
     <img id="loading-image" src="images/loader.gif" alt="Loading..." />
-    <p>Loading...</p>
-    <p>Please be patient</p>
-    <p>We just have too much music</p>
+    <h3>Loading...</h3>
+    <h3>Please be patient</h3>
+    <h3>We just have too much music</h3>
 </div>
 
 <script>
