--- a/schedule.html
+++ b/schedule.html
@@ -1,91 +1,107 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Synchronous by TEMPLATED
+    templated.co @templatedco
+    Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>Karaoke Kid</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
+	<head>
+		<title>Karaoke Kid</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
+		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-panels.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel-noscript.css" />
+			<link rel="stylesheet" href="css/style.css" />
+		</noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+	</head>
+	<body>
+		<div id="wrapper">
+			
+			<!-- Header -->
+			<div id="header">
+				<div class="container"> 
+					
+					<!-- Logo -->
+					<div id="logo">
+						<h1><a href="#">Karaoke Kid</a></h1>
+						<span>Our Schedule</span>
+					</div>
+				</div>
+			</div>
+			<!-- /Header -->
+			
+			<div id="page">
+				<div class="container">
+					<div class="row">
+						<div class="3u">
+							<section id="box1">
+								<header>
+									<h2>Tuesday</h2>
+									<p> Granfalloons 9-12 </p>
+									<p> Miller's Ale House 9-1 </p>
+									<h2> Wednesday </h2>
+									<p> Waterway 9-1 </p>
+									<h2> Thursday </h2>
+									<p> Crystal Ball 7:30-11:30 </p>
+									<p> Primanti Bros Hershey 8-11:30 </p>
+									<h2> Friday </h2>
+									<p> Primanti Bros York 9-1 </p>
+									<h2> Saturday </h2>
+									<p> Primanti Bros Lancaster 9-12:30 </p>
+									<h2> Sunday </h2>
+									<p> Holy Hound 8-12 </p>
+								</header>
+							</section>
+						</div>
+					</div>
 
-        a.button4 {
-            display: inline-block;
-            padding:0.5em 3em;
-            border:0.16em solid #FFFFFF;
-            margin:0 0.3em 0.3em 0;
-            box-sizing: border-box;
-            text-decoration:none;
-            text-transform:uppercase;
-            font-family:'Roboto',sans-serif;
-            font-weight:400;
-            color:#FFFFFF;
-            text-align:center;
-            transition: all 0.15s;
-
-        }
-        a.button4:hover{
-            color:#DDDDDD;
-            border-color:#DDDDDD;
-
-
-        }
-        a.button4:active{
-            color:#BBBBBB;
-            border-color:#BBBBBB;
-
-
-        }
-        @media all and (max-width:30em){
-             a.button4{
-                display:block;
-                margin:0.4em auto;
-                
-
-                 }
-        }
-
-    </style>
-</head>
-<body background='images/bkbg.jpg'>
-
-
-<div class=mainStyle>
-    <center>
-        <img src='images/orkeokikid.jpg' alt="some crap here" class = stretch>
-    </center>
-    <p class=bigText> Our Schedule </p>
-
-    <p class=midTextWhite> Show Times Vary </p>
-    <p></p>
-    <p></p>
-    <p class=midTextWhite> Tuesday: Granfalloons 9-12 </p>
-    <p class=midTextWhite> Tuesday: Miller's Ale House 9-1 </p>
-    <p class=midTextWhite> Wednesday: Waterway 9-1 </p>
-    <p class=midTextWhite> Thursday: Crystal Ball 7:30-11:30 </p>
-    <p class=midTextWhite> Thursday: Primanti Bros Hershey 8-11:30 </p>
-    <p class=midTextWhite> Friday: Primanti Bros York 9-1 </p>
-    <p class=midTextWhite> Saturday: Primanti Bros Lancaster 9-12:30 </p>
-    <p class=midTextWhite> Sunday: Holy Hound 8-12 </p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <p class=bigText> Want the Karaoke Kid to do your next event or wedding?</p>
-    <center>
-    <a href="./contact.html" class="button4">Just Contact Us</a><br>
-    </center>
-    <p class=midTextWhite> We'd be happy to talk about it!!</p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+				</div>	
+			</div>
 
 
-</div>
-</body>
+			<!-- Footer -->
+			<div id="footer">
+				<div class="container">
+					<div class="row">
+						<div class="3u">
+							<section id="box1">
+								<header>
+								</header>
+								<ul class="style3">
+									<li class="first">
+									<li>
+								</ul>
+							</section>
+						</div>
+						<div class="6u">
+							<section id="box2">
+								<header>
+									<h2> Want the Karaoke Kid to do your next event or wedding? </h2>
+								</header>
+								<div> <a href="#" class="image full"><img src='images/orkeokikid.jpg' alt="" height=250 width=175></a> </div>
+								<p> Karaoke Kid offers the best quality Karaoke DJ Services in South Central PA. In addition to our Karaoke DJ Services we also offer Live Music Services for Weddings, Corporate events, and Weddings.  Interested in hiring Karaoke Kid? Just contact us, we'd love to talk!</p>
+							</section>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- Copyright -->
+			<div id="copyright">
+				<div class="container">
+					<p>All rights reserved. Design by Templated. Created by Stinky</p>
+				</div>
+			</div>
+			
+		</div>
+	</body>
 </html>
-
