--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <div id="banner" class="container"><img src="images/banner.jpg" width="1000" height="300" alt="" /></div>
+    <div id="banner" class="container"><img src="images/banner3.jpg" width="1000" height="300" alt="" /></div>
     <div id="page" class="container">
         <div id="content">
             <div id="box1">
