--- a/schedule.html
+++ b/schedule.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Karaoke Kid</title>
+		<title>Karaoke KID</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
