--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </li>
                     <li>
                         <h3><em><img src="images/holyhound.png" alt="" width="130" height="130" class="alignleft border" /></em>Holy Hound Taproom</h3>
-                        <p>Featuring 30 rotating craft beers on tap, a wide range of bottles, a variety of single malt scotch and small batch bourbon, karaoke 9-Midnight.</p>
+                        <p>Featuring 30 rotating craft beers on tap. karaoke 9-Midnight.</p>
                         <p><a href="./schedule.html" class="button-style">Schedule</a></p>
                     </li>
                     <li>
